# Mother2Synth

.github/instructions/: General Instructions.instructions.md  WhatIsThisProject.instructions.md
backend/: .env.example  README.md  app.py  board_creator.py  chat_assistant.py  dropzone.py  human_checkpoints.py  llm.py  main.py  normalizer.py  paths.py  pyproject.toml  quality_guard.py  shared_utils.py
backend/annotated/: Test Transcript _ Mini.json
backend/atoms/: Test Transcript _ Mini.json
backend/cleaned/: Test 2.txt  Test Transcript _ Mini.txt
backend/data/bro/annotated/: Test Transcript _ Mini.json
backend/data/bro/atoms/: Test Transcript _ Mini.json
backend/data/bro/boards/: 98b19ebe.json
backend/data/bro/cleaned/: Test Transcript _ Mini.txt
backend/data/bro/graph/: Test Transcript _ Mini.json
backend/data/comments/: Test Transcript _ Mini (1).pdf.json
backend/data/test/annotated/: Test 2.json  Test Transcript _ Mini (1).json
backend/data/test/atoms/: Test 2.json  Test Transcript _ Mini (1).json
backend/data/test/boards/: a8b4ff8f.json
backend/data/test/cleaned/: Test Transcript _ Mini (1).txt
backend/data/test/graph/: Test 2.json  Test Transcript _ Mini (1).json
backend/graph/: Test Transcript _ Mini.json
backend/routes/: atoms.py  board.py  chat.py  comments.py  graph.py  qa.py  quality_guard.py  upload.py
backend/themes/: DELETE_ME.txt  README_DELETED.txt
frontend/: .env.example  README.md  index.html  package-lock.json  package.json
frontend/src/: ARCHIVE_Shell.css  ARCHIVE_Shell.jsx  AnnotatedAtomsStage.css  App.css  api.js  (+32 more)
